syntax = "proto3";

package raft;

service Replication {
    rpc AppendEntry (Request) returns (Response) {};
}

message Request {
    int32 term = 1;
    int32 leaderId = 2;
    int32 prevLogIndex = 3;
    int32 prevLogTerm = 4;
    repeated int32 entries = 5;
    int32 leaderCommit = 6;
}

message Response {
    int32 term = 1;
    bool success = 2;
}
